src/css/sass/data-visualizations.scss
drought-reservoir-levels:defined .data-viz-pct,
drought-snowpack-levels:defined .data-viz-pct,
drought-precipitation-levels:defined .data-viz-pct {
  font-size: 2.5rem;
  font-weight: 700;
}

drought-snowpack-levels:defined .snowpack-current-level {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: .25rem;
  line-height: 1;
  margin: 0;
}

.full-bleed {
  margin-left: calc(50% - 50vw);
  width: 100vw;
}

.full-bleed-content-area {
  padding: 0 16px;
  background: transparent;
}
@media screen and (min-width: 1024px) {
  .full-bleed-content-area {
    max-width: 1176px;
    margin: 0 auto;
  }
}

body {
  overflow-x: hidden;
}

.section-block {
  padding: 3rem 0;
  p:last-child {
    margin-bottom: 0;
  }
}

.tracking-conditions {
  background-color: #F6EAE5;
  &-content {
    padding: 0 1rem;
    display: flex;
    background: transparent;
  }
  header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  &-banner {
    width: 100%;
    height: 10rem;
    object-fit: cover;
  }
  &-intro {
    h3 {
      margin-top: 0;
    }
  }
}

.home-grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(18rem, 1fr));
  grid-template-rows: auto;
  row-gap: 2.5rem;
  column-gap: 1.5rem;
  &-span-2 {
    grid-column-end: span 2;
  }
  &-span-3 {
    grid-column-end: span 3;
  }
}

@media screen and (max-width: 950px) {
  .home-grid {
    grid-template-columns: repeat(2, minmax(18rem, 1fr));
    &-span-3, &-span-2-md {
      grid-column-end: span 2;
    }
  }
}

@media screen and (max-width: 650px) {
  .home-grid {
    grid-template-columns: 1fr;
    &-span-3, &-span-2, &-span-2-md {
      grid-column-end: span 1;
    }
  }
}

drought-spei-map {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  .spei-map-img {
    max-width: 60%;
  }
}

.data-viz {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  row-gap: .5rem;
  background-color: white;
  &-desc {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  &-footer {
    display: flex;
    flex-direction: row;
    align-items: end;
    justify-content: space-between;
    font-size: .95rem;
    column-gap: 1rem;
  }
  p, h3, h4 {
    margin: 0;
  }
  &-placement {
    flex-grow: 5;
    display: flex;
    margin: 1rem 0;
    table, td, th {
      font-size: .8em;
      border-collapse: collapse;
      border: 1px solid;
      padding: 0.25rem;
      text-align: start;
      caption-side: bottom;
    }
  }
  &-freq {
    color: #6B6C77;
    max-width: 60%;
  }
}

.highlight-box {
  margin: 1rem 0;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  &-item {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    column-gap: 1rem;
    border: solid 1px #E1E0E3;
    padding: 1rem;
    svg {
      flex-shrink: 0;
    }
    p:last-child {
      margin-bottom: 0;
    }
  }
  &-figure {
    font-weight: 700;
    font-size: 1.5em;
    display: block;
    margin-bottom: .5rem;
  }
}

@media screen and (max-width: 950px) {
  .highlight-box {
    flex-direction: row;
  }
}

@media screen and (max-width: 650px) {
  .highlight-box {
    flex-direction: column;
  }
}

.helping-people {
  h2 {
    margin-top: 0;
  }
  &-spotlight {
    padding: 1.5rem;
    background-color: #F2E1DA;
    figcaption {
      color: #5E5E6A;
    }
    h3, h4 {
      margin-top: 0;
    }
    figure {
      margin: 1rem 0;
    }
    &-banner {
      width: 100%;
    }
    p:last-child {
      margin-bottom: 0;
    }
  }
  &-actions {
    h4 {
      margin-top: 0;
    }
  }
}

.visit-save-our-water {
  padding: 1.5rem;
  background: linear-gradient(96deg, #FBF0EA 25%, #EEC9B9 80%);
  h3 {
    margin-top: 0;
  }
  p:last-child {
    margin-bottom: 0;
  }
}

.do-your-part {
  border: solid 1px #E1E0E3;
  .data-viz-placement {
    flex-direction: column;
    justify-content: center;
    .data-viz-stat {
      font-size: 1.5em;
      font-weight: 700;
    }
    .data-viz-pct {
      color: #B71234;
    }
  }
}

.tip-box {
  background-color: #F9F9FA;
  img { 
    width: 100%;
    vertical-align: middle;
  }
  &-content {
    padding: 1rem;
    a {
      text-decoration: none;
    }
    h4 {
      margin-top: 0;
    }
  }
}

.how-to-help {
  padding-top: 0;
}



.heading-with-more {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  h2, h3, p {
    margin: 0
  }
}

.h2-with-more {
  margin: 0 0 1.5rem 0;
}

.h3-with-more {
  margin: 1.5rem 0 1rem 0;
}

.button-link {
  text-decoration: none;
  border: solid 1px #4A1106;
  color: #4A1106;
  padding: .5rem .75rem;
  display: inline-block;
  border-radius: .25rem;
  &:hover {
    color: #230803;
    border-color: #230803;
  }
}

